Refactor : 클래스 개행 추가 및 메서드 캡슐화